# SpaceInvaders

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SpaceInvaders.sln  SpaceInvaders.vcxproj  SpaceInvaders.vcxproj.filters  main.cpp
components/: AICmp.cpp  AICmp.h  CollisionCmp.cpp  CollisionCmp.h  HPCmp.cpp  HPCmp.h  InputCmp.cpp  InputCmp.h  PhysicsCmp.cpp  PhysicsCmp.h  RenderCmp.cpp  RenderCmp.h
game/: Map.cpp  Map.h  MenuState.cpp  MenuState.h
libs/: CMakeLists.txt
src/: main.cpp
src/components/: AICmp.h  CollisionCmp.cpp  CollisionCmp.h  HPCmp.cpp  HPCmp.h  InputCmp.cpp  PhysicsCmp.h  RenderCmp.h
src/game/: Map.cpp  Map.h  MenuState.cpp
src/systems/: InputSys.cpp  InputSys.h  RenderSys.h
src/tinyECS/: ComponentStorage.h  Entity.h  EntityManager.h  StateManager.cpp  StateManager.h  utils.h
systems/: InputSys.cpp  InputSys.h  RenderSys.cpp  RenderSys.h
tinyECS/: Component.h  ComponentStorage.h  Entity.h  EntityManager.cpp  EntityManager.h  GameContext.h  StateManager.h  utils.h
